[package]
name = "supervisoRS"
version = "0.1.0"
edition = "2021"

[dependencies]
femtovg = { version = "0.9.2", features = ["glutin", "serde"] }
fs_extra = "1.3.0"
glutin = { version = "0.30", features = ["egl"], default-features = false }
glutin-winit = "0.3.0"
instant = "0.1.13"
platform-dirs = "0.3.0"
raw-window-handle = "0.5.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
shellexpand = "3.1.0"
sysinfo = "0.32.0"
toml = "0.8.19"
winit = "0.28.7"
