[package]
name = "supervisoRS"
version = "0.0.0"
edition = "2024"

[dependencies]
dark-light = "2.0.0"
fs_extra = "1.3.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
platform-dirs = "0.3.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.129"
shellexpand = "3.1.0"
sysinfo = "0.34.2"
toml = "0.8.19"
itertools = "0.14.0"
clap = { version = "4.5.35", features = ["derive"] }
serde_derive = "1.0.218"
png = "0.17.16"

[dependencies.sdl3]
version = "0.14.21"
default-features = false
features = ["build-from-source", "ttf"]
